src/css/cs.css
@import "./variables.css";

body
{
    background: url("../assets/images/csProjectImages/Circuit_Unsplash.jpg") lightgray 50% / cover no-repeat;
    background-blend-mode: multiply, normal;
}

header
{
    width:              100%;
    position:           fixed;

    background-color:   var(--black-75);
}

.bg1
{
    background: radial-gradient(109.69% 109.69% at -9.69% 50.13%, #540A0A 0%, rgba(13, 13, 13, 0.00) 100%);

    h2
    {
        color:  var(--color-2);
    }
}

.bg2
{
    background: radial-gradient(106.69% 106.69% at 106.69% 50.25%, #004360 0%, rgba(13, 13, 13, 0.00) 100%);

    h2
    {
        color:  var(--color-1);
    }
}

main
{
    color: var(--grey-9);
}

.labelSection
{
    display:        flex;
    flex-direction: column;
    align-items:    flex-start;
    align-self:     stretch;
}

h1
{
    /* layout */
    display:            flex;
    padding:            var(--space-m) 0;
    justify-content:    center;
    align-items:        center;
    align-self:         stretch;

    /* typography */
    text-align:         center;
    font-size:          var(--text-2xl);
    font-family:        BespokeStencil-Bold;
}

.project
{
    display:            flex;
    flex-direction:     row;
    padding-inline:     5%;
    justify-content:    center;
    align-items:        top;
    gap:                50px;
    height:             20em;

    .projectPic
    {
        display:            flex;
        justify-content:    center;
        align-items:        center;
        align-self:         stretch;
        overflow:           hidden;
    }

    .description
    {
        /* layout */
        display:        flex;
        flex-direction: column;
        align-items:    flex-start;
        max-width:      50%;
        padding:        var(--space-m) 0;
        gap:            var(--space-s);

        /* typography */
        text-wrap-mode:     wrap;
        text-wrap-style:    balance;

        h2
        {
            align-self: stretch;

            /* typography */
            font-size:      var(--text-xl);
            font-style:     normal;
            font-family:    BespokeSerif-Bold;
        }

        p
        {
            align-self: stretch;
            
            filter:     opacity(80%);
        }
    }

    .buttons
    {
        display:        flex;
        flex-direction: row;
        gap:            var(--space-m);
    }

    .globalgamejam svg
    {
        width:  var(--text-xl);
        height: var(--text-xl);
    }
}

.project1
{
    .projectPic
    {
        padding-top:        10em;
    }

    img
    {
        max-width:      600px;
        border-radius:  var(--radius-m);
    }
}

.project2
{
    .projectPic
    {
        padding-bottom:        12em;
    }

    img
    {
        max-width:      600px;
        border-radius:  var(--radius-m);
    }
}

.project3
{
    .projectPic
    {
        padding-top:        8em;
        padding-inline:     10%;
    }

    img
    {
        max-width:          300px;
        border-radius:      var(--radius-m);
    }
}

.project4
{
    .projectPic
    {
        padding-top:        8em;
    }

    img
    {
        max-width:      500px;
        border-radius:  var(--radius-m);
        transform:      rotate(180deg);
    }
}

footer
{
    display:            flex;
    justify-content:    flex-end;
    align-items:        center;
    align-self:         stretch;
    padding:            var(--space-xs) var(--space-s);

    a
    {
        text-decoration: none;
    }

    a:hover
    {
        text-decoration: underline;
    }
}

